--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,10 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <!-- VXG chrome plugin -->
+  <script src="assets/vxgplayer-1.8.31.min.js"></script>
+  <link rel="stylesheet" href="assets/vxgplayer-1.8.31.min.css">
+
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
@@ -28,6 +32,10 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+
+  <style>
+    background: #333;
+  </style>
 
 </head>
 <body>
